--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -4,7 +4,6 @@
 <!DOCTYPE html>
 <html class="{% if user.is_from_android %} android{% endif %}{% if not user.is_from_weixin %} notweixin{% endif %}">
     <head>
-        {% block init %}{% endblock %}
         <meta charset="UTF-8" />
         <title>{{ page_title }}</title>
         {% if request.enable_sql_monitor %}
@@ -59,9 +58,9 @@
         <script type="text/javascript" src="/termite_static/v3/webapp/backbone_lite.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/validate.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/common.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/webapp/webapp_utils.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/inputable_page.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/edit_order_page.js"></script>
-        <script type="text/javascript" src="/termite_static/v3/webapp/localStorage_helper.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/shopping_cart_page.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/buy_custom_model_product_page.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/edit_address_page.js"></script>
@@ -226,6 +225,7 @@
 
         <script>
             webStorageProbe();
+            initSessionStorage();
         </script>
 
         {% block js %}{% endblock %}
