--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -423,7 +423,7 @@
                             {{html W.data.getDynamicComponentDataForDialogSelectControl(component, field)}}
                             <input data-field="${field.name}" name="${field.name}" type="hidden" />
                                 <button class="btn btn-small xui-i-triggerButton" data-target-dialog="${field.dialog}" data-dialog-parameter="${field.dialogParameter}">
-                                    {{if component.model.get(field.name)}}
+                                    {{if component.model.get(field.name).ticket}}
                                         ${field.triggerButton.hasdata}
                                     {{else}}
                                         ${field.triggerButton.nodata}
@@ -435,7 +435,7 @@
                             {{/if}}
                         </div>
                         {{if field.help}}
-                        <div class="qrcode_help" style="float:right;color: #666;width: 55%;{{if component.model.get(field.name)}} height:100px;line-height:100px{{/if}}">
+                        <div class="qrcode_help" style="float:right;color: #666;width: 55%;{{if component.model.get(field.name).ticket }} height:100px;line-height:100px{{/if}}">
                             {{html field.help.replace(/\n/g, "<br/>")}}
                         </div>
                         {{/if}}
