--- a/weapp/card/templates/card/editor/weizoom_num_card_detail.html
+++ b/weapp/card/templates/card/editor/weizoom_num_card_detail.html
@@ -137,6 +137,7 @@
                     <th style="width: 20%">操作时间</th>
                     <th style="width: 20%">用户名</th>
                     <th>申请人</th>
+                    <th>申请部门</th>
                     <th>备注</th>
                     <th>操作</th>
                 </tr>
@@ -147,6 +148,7 @@
                     <td>${card_operation.created_at}</td>
                     <td>${card_operation.operater_name}</td>
                     <td>${card_operation.activated_to}</td>
+                    <td>${card_operation.department}</td>
                     <td>${card_operation.remark}</td>
                     <td>${card_operation.operate_log}</td>
                 </tr>
