--- a/weapp/card/templates/card/editor/list_weizoom_card_detail.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card_detail.html
@@ -53,7 +53,9 @@
                     data-api="weizoom_cards/get" 
                     data-template-id="#weizoom_card_record_list_view" 
                     data-init-sort="-created_at"  
-                    data-item-count-per-page="15">
+                    data-item-count-per-page="15"
+                    data-outer-selecter=".xa-selectAll"
+                    data-selectable="true">
                 </div>
             </div>
         </fieldset>
@@ -72,7 +74,6 @@
         <thead>
             <tr>
                 <th>
-                    <input class="xa-select-all fl " style="cursor: default;margin-top:2px;" type="checkbox" value="1" name="select-all">
                     <span class="">
                         卡号
                     </span>
@@ -86,7 +87,7 @@
                 <th>激活时间</th>
                 <th>有效期</th>
                 <th>备注</th>
-                <th>领用人</th>
+                <th>领用人<br>申请部门</th>
                 <th>操作</th>
             </tr>
         </thead>
@@ -94,11 +95,6 @@
             {{each(i, card) items}}
             <tr tr-id='${card.id}'>
                 <td style="width:85px;">
-                    {{if (card.is_expired && card.status!=2) || card.status==2}}
-                        <input class="fl " style="cursor: default;margin-top:2px;" type="checkbox" value="1" name="select-one" disabled>
-                    {{else}}
-                        <input class="fl " style="cursor: default;margin-top:2px;" type="checkbox" value="1" name="select-one" >
-                    {{/if}}
                     <a {{if can_view_card_details}} href="/card/card_num_details/get/?card_id=${card.weizoom_card_id}&IS_CARD_RULE=TRUE"{{else}} href="javascript:void(0);"{{/if}}>${card.weizoom_card_id}</a>
                 </td>
                 <td>
@@ -143,7 +139,7 @@
                     ${card.remark}
                 </td>
                 <td style="max-width: 120px;">
-                    ${card.activated_to}
+                    ${card.activated_to}<br>${card.department}
                 </td>
                 <td>
                     {{if !card.is_expired}}
@@ -196,12 +192,16 @@ $(document).ready(function() {
         getTemplate: function() {
             var template ='<dl class="itemDeleteView2 wui-confirmView" style="margin: 10px 16px 5px 6px;">'
                     +'<div class="activated_to" style="margin-left: 4px;">'
-                    +'<label for="activated_to" class="star_show">申请人</label>'
-                    +'<input type="text" id="activated_to" style="width: 100px;margin-left: 8px;">'
+                    +'<label for="activated_to" class="star_show">申&nbsp;&nbsp;请&nbsp;&nbsp;人</label>'
+                    +'<input type="text" id="activated_to" style="width: 100px;margin-left: 7px;">'
                     +'</div>'
-                    +'<div class="card_remark" style="margin-top: 10px;margin-left: 4px;">'
-                    +'<label for="card_remark" class="star_show" style="vertical-align: top;">备&nbsp;&nbsp;注</label>'
-                    +'<textarea type="text" id="card_remark" style="height: 52px;width:164px;margin-left: 14px;"></textarea>'
+                    +'<div class="department" style="margin-left: 4px;">'
+                    +'<label for="department" class="star_show">申请部门</label>'
+                    +'<input type="text" id="department" style="width: 100px;margin-left: 6px;">'
+                    +'</div>'
+                    +'<div class="card_remark" style="margin-left: 4px;">'
+                    +'<label for="card_remark" class="star_show" style="vertical-align: top;">备&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注</label>'
+                    +'<textarea type="text" id="card_remark" style="height: 52px;width:164px;margin-left: 5px;"></textarea>'
                     +'</div>'
                     +'<button type="button" class="xa-confirm btn btn-success" style="background-color:#207CBE;margin: 8px 47px;width:60px;">确定</button> '
                     +'<button type="button" class="xa-cancel2 btn" style="background-color:#207CBE; color:#FFF;margin: 0px -44px;width:60px;">取消</button>'
@@ -272,6 +272,7 @@ $(document).ready(function() {
                 var weizoom_card_info = data.weizoom_card_info;
                 $("#card_remark").val(weizoom_card_info.card_remark);
                 $("#activated_to").val(weizoom_card_info.activated_to);
+                $("#department").val(weizoom_card_info.department);
             },
             error: function(resp) {
                 W.showHint('error','失败');
@@ -283,8 +284,14 @@ $(document).ready(function() {
             confirm: function(){
                 var card_remark = $("#card_remark").val().trim();
                 var activated_to =$("#activated_to").val().trim();
+                var department = $("#department").val().trim();
                 if (activated_to.length<= 0){
                     W.showHint('error','请输入领用人');
+                    $('.xa-submit').bottonLoading({status:'hide'});
+                    return;
+                }
+                if (department.length<= 0){
+                    W.showHint('error','请输入领用部门');
                     $('.xa-submit').bottonLoading({status:'hide'});
                     return;
                 }
@@ -293,7 +300,7 @@ $(document).ready(function() {
                     $('.xa-submit').bottonLoading({status:'hide'});
                     return;
                 }
-                if (activated_to.length>20 || card_remark.length> 20) {
+                if (activated_to.length>20 || card_remark.length> 20|| department.length>20) {
                     W.showHint('error','该内容最多输入20个字符');
                     $('.xa-submit').bottonLoading({status:'hide'});
                     return;
@@ -307,6 +314,7 @@ $(document).ready(function() {
                         status: '0',
                         card_remark: card_remark,
                         activated_to: activated_to,
+                        department: department,
                         operate_style: operate_style
                     },
                     success: function(data) {
@@ -326,7 +334,7 @@ $(document).ready(function() {
         var $el = $(event.currentTarget);
         var operate_style= $(this).attr('operate_style');
         var card_ids =[],flag = false;
-        $('input[name="select-one"]:checked').parents('tr').each(function(){
+        $('input[name="xa-select"]:checked').parents('tr').each(function(){
             card_status= $(this).children('.card_status').attr('td-status');
             if(card_status == 3 ){
                 card_ids.push($(this).attr('tr-id'));
@@ -342,6 +350,7 @@ $(document).ready(function() {
         }
         $("#card_remark").val("");
         $("#activated_to").val("");
+        $("#department").val("");
 
         W.requireConfirm2({
             $el: $el,
@@ -349,8 +358,14 @@ $(document).ready(function() {
             confirm: function(){
                 var card_remark = $("#card_remark").val().trim();
                 var activated_to =$("#activated_to").val().trim();
+                var department = $("#department").val().trim();
                 if (activated_to.length<= 0){
                     W.showHint('error','请输入领用人');
+                    $('.xa-submit').bottonLoading({status:'hide'});
+                    return;
+                }
+                if (department.length<= 0){
+                    W.showHint('error','请输入领用部门');
                     $('.xa-submit').bottonLoading({status:'hide'});
                     return;
                 }
@@ -373,6 +388,7 @@ $(document).ready(function() {
                         status: '0',
                         card_remark: card_remark,
                         activated_to: activated_to,
+                        department: department
                     },
                     success: function(data) {
                         W.finishConfirm2();
@@ -395,7 +411,7 @@ $(document).ready(function() {
         var $el = $(event.currentTarget);
         var card_ids =[],flag = false;
 
-        $('input[name="select-one"]:checked').parents('tr').each(function(){
+        $('input[name="xa-select"]:checked').parents('tr').each(function(){
             card_status= $(this).children('.card_status').attr('td-status');
             if(card_status != 3 ){
                 card_ids.push($(this).attr('tr-id'));
@@ -418,8 +434,14 @@ $(document).ready(function() {
             confirm: function(){
                 var card_remark = $("#card_remark").val().trim();
                 var activated_to =$("#activated_to").val().trim();
+                var department =$("#department").val().trim();
                 if (activated_to.length<= 0){
                     W.showHint('error','请输入领用人');
+                    $('.xa-submit').bottonLoading({status:'hide'});
+                    return;
+                }
+                if (department.length<= 0){
+                    W.showHint('error','请输入领用部门');
                     $('.xa-submit').bottonLoading({status:'hide'});
                     return;
                 }
@@ -441,6 +463,7 @@ $(document).ready(function() {
                         card_id: card_ids.toString(),
                         card_remark: card_remark,
                         activated_to: activated_to,
+                        department: department,
                         status: '3'
                     },
                     success: function(data) {
@@ -489,12 +512,7 @@ $(document).ready(function() {
             }
         });
     });
-    
-    
-    $('.xa-listView').delegate('.xa-select-all', 'click', function(event) {
-        $('[name=select-one]:checkbox').attr('checked',this.checked);
-            });
-    
+
     $('#appendBtn').click(function(event) {
         W.dialog.showDialog('W.weapp.dialog.AppendWeizoomCardDialog', {
             success: function(data) {
@@ -598,15 +616,20 @@ $(document).ready(function() {
                             var $tr = $(this);
                             
                             if ($tr.hasClass(_this.selectableTrSelector)) {
-                                $tr.prepend('<td width="30"><input type="checkbox" class="xa-select" /></td>');
+                                $tr.prepend('<td width="30"><input type="checkbox" class="xa-select" name="xa-select" /></td>');
                             } else {
                                 $tr.prepend('<td width="30"></td>');
                             }
                         });
                     } else {
-                        $node.find('tbody tr').each(function() {
+                        $node.find('tbody tr').each(function(index) {
+                            var card = data.items[index]['status'];
                             var $tr = $(this);
-                            $tr.prepend('<td><input type="checkbox" class="xa-select" /></td>');
+                            if (card['is_expired'] && card['status']!=2 || card['status']==2){
+                                $tr.prepend('<td><input type="checkbox" class="xa-select" value="1" name="xa-select"  disabled/></td>');
+                            }else{
+                                $tr.prepend('<td><input type="checkbox" class="xa-select" value="1" name="xa-select" /></td>');
+                            }
                         });
                     }
                 }
@@ -701,7 +724,7 @@ $(document).ready(function() {
                 }
                 // 扩展advanced_table.load方法
                 if($('.card_status:first dl').html()=="已过期"){
-                    $('.xa-select-all').attr('disabled',true);
+                    $('.xa-selectAll').attr('disabled',true);
                 }
                 this.afterload();               
             },
