[b_mall_6353][X-Ray]1、解决购物车取消勾选的商品过一段时间被勾选问题 2、解决原无库存不可购买商品，有库存后不可点击的问题

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
@@ -399,7 +399,7 @@ $(document).ready(function() {
                             $check.removeClass('xui-checkCart').addClass('xui-disabled-radio');
                         }else{
                             $product.find('.xui-understock').hide();
-                            $check.removeClass('xui-disabled-radio').addClass('xui-checkCart');
+                            $check.removeClass('xui-disabled-radio');
                         }
                         $product.find('.xui-understock').html(understock_msg);
                         $(this).data('view').setMaxCount(maxCount);
