[b_mall_6367][X-Ray]解决新添加多规格商品库存设置为0，在商品待售列表里不显示已售罄；购物车失效商品价钱两位小数

--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -102,7 +102,7 @@
                                   {{/if}}
 
 								</a>
-								{{if (!product.is_use_custom_model && product.stocks === 0)}}
+								{{if product.stocks === 0}}
 								<div class="xui-i-sellout">已售罄</div>
 								{{/if}}
 							</div>
