--- a/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
@@ -14,6 +14,9 @@
         .xa-protocol-deleteData{
             display: none;
         }
+        .xui-selectBtn{
+            cursor: pointer;
+        }
     </style>
 {% endblock %}
 {% block content-panel %}
