微助力， 隐藏助力详情按钮

--- a/weapp/apps/customerized_apps/powerme/templates/editor/powerme_participances.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/powerme_participances.html
@@ -115,7 +115,7 @@
 					{{html item.participant_name}}
 				</td>
 				<td>
-				    ${item.power}<a class="btn btn-primary hidden-btn" style="" href="/apps/powerme/powerme_participance_detail/?member_id=${item.member_id}&belong_to=${item.belong_to}" target="_blank">查看详情</a>
+				    ${item.power}<a class="btn btn-primary hidden-btn" style="display: none;" href="/apps/powerme/powerme_participance_detail/?member_id=${item.member_id}&belong_to=${item.belong_to}" target="_blank">查看详情</a>
 				</td>
 				<td>
 					${item.created_at}
