--- a/weapp/apps/customerized_apps/feedback/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/feedback/templates/editor/workbench.html
@@ -63,13 +63,13 @@
   <!-- *end_prunt_task* -->
   
   <script type="text/javascript">
-    W.uid = {{ user.id }};
+    W.uid = {{ request.manager.id }};
     W.projectId = "{{project_id}}";
     W.activityId = "{{feedback.id}}";
     W.host = "{{request.META.HTTP_HOST}}";
     W.API_VERSION = 1;
     var isCreateNewData = {% if is_create_new_data %}true{% else %}false{% endif %};
-    W.isSystemManager = {% if user|is_system_manager %}true{% else %}false{% endif %};
+    W.isSystemManager = {% if request.manager|is_system_manager %}true{% else %}false{% endif %};
     var bottomDistance = 110;
     
     var loadPages = function(pageManagerView) {
