--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -63,6 +63,7 @@
         <script type="text/javascript" src="/termite_static/v3/webapp/edit_order_page.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/shopping_cart_page.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/buy_custom_model_product_page.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/webapp/address_utils.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/edit_address_page.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/order_detail_page.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/alert.js"></script>
