1、微助力，增加后台详情会员状态字段 2、增加会员取关后给其助力的错误提示

--- a/weapp/apps/customerized_apps/event/templates/editor/event_participances.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/event_participances.html
@@ -28,7 +28,7 @@
 		</div>
 		<div class="xui-i-col">
 			<div class="xui-i-item ml10">
-				<label>活动时间
+				<label>报名时间
 				：</label>
 				<input
 					type="text"
