--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -123,18 +123,19 @@
           <div class="errorHint"></div>
 				</div>
 			</div>
-			{% if not request.manager.is_weizoom_mall and supplier|length == 0 %}
-			<div class="form-group nostar ">
-				<label class="control-label fl" for="bar_code">同步到微众商城：</label>
-				<div class="fl w700">
-					<label><input name="weshop_sync" value="0" class="ml5 mr5" type="radio"{%if product.weshop_sync == 0%} checked{%endif%}{%if product.weshop_status%} disabled{%endif%}/>不同步</label>
-					<label><input name="weshop_sync" value="1" class="ml5 mr5" type="radio"{%if product.weshop_sync == 1 or not product%} checked{%endif%}{%if product.weshop_status%} disabled{%endif%}/>同步</label>
-					<label><input name="weshop_sync" value="2" class="ml5 mr5" type="radio"{%if product.weshop_sync == 2%} checked{%endif%}{%if product.weshop_status%} disabled{%endif%}/>加价同步</label>
-					<span class="xui-fontGary">（同步后，微众商城将加价10%，有助于从微众商城引流到本店）</span>
-					<div class="errorHint"></div>
-				</div>
-			</div>
-			{% endif %}
+{#           微众商城代码#}
+{#			{% if not request.manager.is_weizoom_mall and supplier|length == 0 %}#}
+{#			<div class="form-group nostar ">#}
+{#				<label class="control-label fl" for="bar_code">同步到微众商城：</label>#}
+{#				<div class="fl w700">#}
+{#					<label><input name="weshop_sync" value="0" class="ml5 mr5" type="radio"{%if product.weshop_sync == 0%} checked{%endif%}{%if product.weshop_status%} disabled{%endif%}/>不同步</label>#}
+{#					<label><input name="weshop_sync" value="1" class="ml5 mr5" type="radio"{%if product.weshop_sync == 1 or not product%} checked{%endif%}{%if product.weshop_status%} disabled{%endif%}/>同步</label>#}
+{#					<label><input name="weshop_sync" value="2" class="ml5 mr5" type="radio"{%if product.weshop_sync == 2%} checked{%endif%}{%if product.weshop_status%} disabled{%endif%}/>加价同步</label>#}
+{#					<span class="xui-fontGary">（同步后，微众商城将加价10%，有助于从微众商城引流到本店）</span>#}
+{#					<div class="errorHint"></div>#}
+{#				</div>#}
+{#			</div>#}
+{#			{% endif %}#}
 			<div class="form-group nostar ">
 				<label class="control-label fl" for="member_count">会员折扣：</label>
 				<div class="col-sm-2 fl pl5">
