--- a/weapp/weixin2/templates/weixin/mp_user/mp_user.html
+++ b/weapp/weixin2/templates/weixin/mp_user/mp_user.html
@@ -81,17 +81,18 @@
 
 			<div style="border-bottom: 1px solid #9d9d9d; margin: 30px 46px 42px 10px;"></div>
 
-			<div class="xui-form disT">
-				<div class="xui-col disTc">
-					<div class="xui-i-item fl">
-						<label class="">微众商城引流：</label>
-						<input name="weshop_followurl" class="follow-input" type="text" value="{{operation_settings.weshop_followurl}}" style="width: 360px; height: 32px; background-color: #fefefe; border: 1px solid #ddd;" placeholder="请输入微信公众号平台的图文素材地址"/>
-					</div>
-					<div class="fl" style="margin: -10px 0 0 152px;">
-						<input type="submit" class="btn btn-primary save-image" id="submitBtn" value="保&nbsp;&nbsp;&nbsp;&nbsp;存" />
-					</div>
-				</div>
-			</div>
+{#            微众商城代码#}
+{#			<div class="xui-form disT">#}
+{#				<div class="xui-col disTc">#}
+{#					<div class="xui-i-item fl">#}
+{#						<label class="">微众商城引流：</label>#}
+{#						<input name="weshop_followurl" class="follow-input" type="text" value="{{operation_settings.weshop_followurl}}" style="width: 360px; height: 32px; background-color: #fefefe; border: 1px solid #ddd;" placeholder="请输入微信公众号平台的图文素材地址"/>#}
+{#					</div>#}
+{#					<div class="fl" style="margin: -10px 0 0 152px;">#}
+{#						<input type="submit" class="btn btn-primary save-image" id="submitBtn" value="保&nbsp;&nbsp;&nbsp;&nbsp;存" />#}
+{#					</div>#}
+{#				</div>#}
+{#			</div>#}
 		</div>
 	</div>
 
