微助力，修复小屏手机排名数字串行的显示问题

--- a/weapp/termite/static/css/apps/powerme.css
+++ b/weapp/termite/static/css/apps/powerme.css
@@ -133,6 +133,7 @@ hr{
     font-size: 0.8rem
 }
 .wui-i-top100-power {
+    margin-left: -30px;
     float: right;
     margin-right: 5px;
     font-size: 0.8rem;
