--- a/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_rules.html
+++ b/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_rules.html
@@ -93,7 +93,7 @@
             <th>活动状态</th>
             <th>领取人数</th>
             <th>优惠券剩余</th>
-            <th width="150">操作</th>
+            <th width="169">操作</th>
         </tr>
     </thead>
     <tbody>
@@ -132,7 +132,7 @@
                 {{/if}}
 
             </td>
-            <td class="tl xui-operation" width="150">
+            <td class="tl xui-operation" width="150" style="padding-left: 10px; padding-right: 0">
                 <a href="/apps/red_envelope/red_envelope_participances/?id=${ rule.id }">分析</a>
                 {{if receive_method}}
                     <span style="display:inline-block;width:29px;"></span>
